--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </span>
         <div class="form-box login">
             <h2>Login</h2>
-            <form onsubmit="login(event)">
+            <form onsubmit="login(event)" id="login-form">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
                     <input id="login-email" type="email" required>
@@ -105,7 +105,7 @@
         
         <div class="form-box register">
             <h2>register</h2>
-            <form  onsubmit="signup(event)">
+            <form  onsubmit="signup(event)" id="register-form">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
                     <input id="register-email" type="email" required>
