--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         
         <div class="form-box register">
             <h2>register</h2>
-            <form  onsubmit="signup(event)" id="register-form">
+            <form  onsubmit="signup(event)" id="register-form" class="registration-form">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
                     <input id="register-email" type="email" required>
