--- a/element5.html
+++ b/element5.html
@@ -67,6 +67,7 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
+                <a href="cart.html" class="cart"><i class="fal fa-shopping-cart cart"></i></a>
                 <li><button class="login-button">Login</button></li>
             </ul>
         </div>
@@ -355,7 +356,7 @@ So what are you waiting for? Learn Python in a way that will advance your career
         </div>
         </footer>
 
-        <script src="element.js"></script>
+        <script src="element.js" type="module"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>
