--- a/software-eng.html
+++ b/software-eng.html
@@ -66,6 +66,7 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
+                <a href="cart.html" class="cart"><i class="fal fa-shopping-cart cart"></i></a>
                 <li><button class="login-button">Login</button></li>
             </ul>
         </div>
