--- a/cart.html
+++ b/cart.html
@@ -78,14 +78,14 @@
             </ul>
         </div>
     </section>
-
-    <div class="delete-section">
+<!--    <div class="delete-section">
         <form id="del-form" onsubmit="delete_course(event)">
             <label for="">Remove Course</label>
             <input id="courseid" type="text" placeholder="enter course-id">
             <button class="delete" type="submit">Remove</button>
         </form>
-    </div>
+    </div> -->
+
     <section id="cart-view">
         <h1><u>COURSE-CART</u> </h1><br>
 
@@ -175,8 +175,8 @@
 
        
     <script src="remove-course.js" type="module"></script>
-    <script src="element.js" type="module"></script>
-    
+  
+    <SCript src="element.js" type="module"></SCript>
     <script src="carts.js" type="module"></script>
 </body>
 </html>
