--- a/cart.html
+++ b/cart.html
@@ -88,13 +88,46 @@
 
     <section id="cart-view">
         <h1><u>COURSE-CART</u> </h1><br>
-
         <div class="course-card"></div>
-        </div>
         
     </section>
 
+    <div class="special-box">
+   
+    
+   <div class="payment">
+    <table class="price-table">
+        <th>Payment Summary</th>
+        <tr >
+           <td>Price:</td>
+           <td id="price"></td>
+        </tr>
+        <tr>
+            <td>Delivery Charges:</td>
+            <td>-$40</td>
+        </tr>
+        <tr>
+            <td>Sub Total::</td>
+            <td id="total price"></td>
+        </tr>
+    </table>
 
+    <div class="payment-form">
+        <form action="">
+        <h3>Shipping Address</h3>
+        <input placeholder="Name" type="text"><br>
+        <input placeholder="Street Address" type="text"><br>
+        <input placeholder="PinCode" type="text"><br>
+        <input placeholder="City" type="text"><br>
+        <input placeholder="state" type="text"><br>
+        <input placeholder="Phone number" type="text"><br><br>
+        <hr>
+        <br>
+        <h3>Payment method</h3><br>
+        <input type="radio" id="radio" name="" value=""><label for="">Cash on delivery</label>
+    </form>
+    </div>
+   </div>
 
 
 
