--- a/element14.html
+++ b/element14.html
@@ -12,7 +12,7 @@
 <body>
     
     <section id="header">
-        <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzs7d1nlxerknIa7Ajtp1dwrRknLGo-4oZ7A&usqp=CAU" class="logo" alt=""></a>
+        <a href="index.html"><img src="https://banner2.cleanpng.com/20180817/wac/kisspng-e-learning-logo-industry-educational-technology-br-offline-is-the-new-online-unleash-the-power-of-an-5b76826b01f469.279560991534493291008.jpg" class="logo" alt=""></a>
         <li class="hov"><a class="abc" href="course.html">Course</a>
             <div class="sub-menu-1">
                 <ul>
@@ -68,7 +68,9 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
                 <a href="cart.html" class="cart"><i class="fal fa-shopping-cart cart"></i></a>
-                <li><button class="login-button">Login</button></li>
+                <li><button class="login-button" id="login-button">Login</button></li>
+                <li><button class="login-button" id="logout-button">Logout</button></li>
+            
             </ul>
         </div>
     </section>
@@ -351,6 +353,7 @@ So what are you waiting for? Learn Python in a way that will advance your career
             <p>> 2023, Tech2 etc HTML CSS Ecommerce Template</p> 
         </div>
         </footer>
+       <script src="session.js" type="module"></script>
         <script src="element13.js"></script>
         <script src="element.js" type="module"></script>  
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
