--- a/payment.html
+++ b/payment.html
@@ -59,10 +59,16 @@
                              <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="City*"> 
                              <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="State*"> </div> <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Country*"> 
                              <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Phone Number*">
-                        <div class="flex justify-between items-center pt-2"> 
-                        <a href="cart.html"><button type="button" class="h-12 w-24 text-blue-500 text-xs font-medium">Return to cart</button></a>
-                            <button type="button" class="h-12 w-48 rounded font-medium text-xs bg-blue-500 text-white">Continue to Shipping</button> 
-                        </div>
+                             <div class="cod">
+                             <input type="radio" class="radio" id="javascript" name="fav_language" value="JavaScript">
+                             <label for="javascript">Cash On Delivery</label>
+                            </div>
+                         <div class="flex justify-between items-center pt-2"> 
+                            
+                            <a href="cart.html"><button type="button" class="h-12 w-24 text-blue-500 text-xs font-medium">Return to cart</button></a>
+                            <a href="final.html"><button type="button" class="h-12 w-48 rounded font-medium text-xs bg-blue-500 text-white">Continue to Shipping</button> </a>
+                            
+                    </div>
                     </div>
                 </div>
             </div>
