--- a/element1.html
+++ b/element1.html
@@ -68,7 +68,7 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
-                <a href="cart.html" class="cart"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="cart.html" class="cart" id="cart"><i class="fal fa-shopping-cart cart"></i></a>
                 <li><button class="login-button" id="login-button">Login</button></li>
                 <li><button class="login-button" id="logout-button">Logout</button></li>
             
@@ -358,7 +358,7 @@ So what are you waiting for? Learn Python in a way that will advance your career
 
     <script src="element.js" type="module"></script>    
     <script src="session.js" type="module"></script>
-    <script src="login.js" type="module"></script>
+    
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>
