--- a/payment.html
+++ b/payment.html
@@ -24,7 +24,7 @@
                 </tr>
                 <tr>
                     <td>Delivery Charges:</td>
-                    <td>-$40</td>
+                    <td>₹ 40</td>
                 </tr>
                 <tr>
                     <td>Total::</td>
@@ -45,28 +45,30 @@
                             <span class="font-bold">Information</span> 
                         </div> <span>Customer Information</span>
                         <div class="relative pb-5"> 
-                            <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="E-mail"> 
+                            <input id="email" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="E-mail"> 
                         </div> 
                         <span>Shipping Address</span>
                         <div class="grid md:grid-cols-2 md:gap-2"> 
-                            <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="First name*"> 
-                            <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Last name*"> 
+                            <input id="first-name" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="First name*"> 
+                            <input id="last-name" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Last name*"> 
                         </div> 
-                        <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Address*"> 
-                        <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Apartment, suite, etc. (optional)">
+                        <input id="address" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Address*"> 
+                        <input id="landmark" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Apartment, suite, etc. (optional)">
                         <div class="grid md:grid-cols-3 md:gap-2"> 
-                            <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Zipcode*">
-                             <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="City*"> 
-                             <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="State*"> </div> <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Country*"> 
-                             <input type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Phone Number*">
+                            <input id="zip-code" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Zipcode*">
+                             <input id="city" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="City*"> 
+                             <input id="state" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="State*"> 
+                            </div> 
+                            <input id="country" type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Country*"> 
+                             <input id="phone"  type="text" name="mail" class="border rounded h-10 w-full focus:outline-none focus:border-green-200 px-2 mt-2 text-sm" placeholder="Phone Number*">
                              <div class="cod">
-                             <input type="radio" class="radio" id="javascript" name="fav_language" value="JavaScript">
+                             <input required type="radio" class="radio" id="javascript" name="fav_language" value="JavaScript">
                              <label for="javascript">Cash On Delivery</label>
                             </div>
                          <div class="flex justify-between items-center pt-2"> 
                             
                             <a href="cart.html"><button type="button" class="h-12 w-24 text-blue-500 text-xs font-medium">Return to cart</button></a>
-                            <a href="final.html"><button type="button" class="h-12 w-48 rounded font-medium text-xs bg-blue-500 text-white">Continue to Shipping</button> </a>
+                            <button id="end-flow" type="button" class="h-12 w-48 rounded font-medium text-xs bg-blue-500 text-white">Continue to Shipping</button>
                             
                     </div>
                     </div>
