--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@ function logout(){
 
         </script>
         <script  src="script.js"></script>
+        <script type="text/javascript" src="https://cdn.c360a.salesforce.com/beacon/c360a/4d494283-7de4-4700-bd76-582092969838/scripts/c360a.min.js"></script>
         <script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
