--- a/final.html
+++ b/final.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/20a2ffff-e983-428e-af4f-6bc85ccbae4a/scripts/c360a.min.js"></script>
 </head>
 <body>
     <div class="final">
