--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                 <a href="cart.html" class="cart" id="cart"><i class="fal fa-shopping-cart cart"></i></a>
                 <li><button class="login-button" id="login-button">Login</button></li>
                 <li><button class="login-button" id="logout-button">Logout</button></li>
+                <li><button id="opt-in">opt-in</button></li>
+                <li><button id="opt-out">opt-out</button></li>
                 
             </ul>
         </div>
