--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@ window.signup = function (e) {
     
     auth.onAuthStateChanged(user => {
         console.log("running");
-        //console.log(user.email);
+        console.log(user.email);
         if(user){
             document.getElementById("login-button").style.display='none';
             document.getElementById("logout-button").style.display='block';
-            //console.log(auth.currentUser);
+            console.log(auth.currentUser);
             document.title = "PROFILE PAGE";
             }
         else{
