--- a/course.html
+++ b/course.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/20a2ffff-e983-428e-af4f-6bc85ccbae4a/scripts/c360a.min.js"></script>
+    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/20a2ffff-e983-428e-af4f-6bc85ccbae4a/scripts/c360a.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
