--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ window.signup = function (e) {
         }
         })   
     
-console.log("cuurentuser=",localStorage.getItem('currentuser'));
+//console.log("cuurentuser=",localStorage.getItem('currentuser'));
 
     
 function logout(){
