--- a/element5.html
+++ b/element5.html
@@ -359,6 +359,6 @@ So what are you waiting for? Learn Python in a way that will advance your career
         <script src="element.js" type="module"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>
+        <!--<script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>-->
 </body>
 </html>
