--- a/index.html
+++ b/index.html
@@ -468,11 +468,11 @@ window.signup = function (e) {
             document.title = "PROFILE PAGE";
             }
         else{
-            localStorage.setItem('currentuser',"");
+            //localStorage.setItem('currentuser',"");
         }
         })   
     
-//console.log("cuurentuser=",localStorage.getItem('currentuser'));
+console.log("cuurentuser=",localStorage.getItem('currentuser'));
 
     
 function logout(){
