--- a/element14.html
+++ b/element14.html
@@ -7,6 +7,7 @@
     <title>parts of speech</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <script src="https://cdn.c360a.salesforce.com/beacon/c360a/20a2ffff-e983-428e-af4f-6bc85ccbae4a/scripts/c360a.min.js"></script>
+    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/8a63a2ff-c0de-4503-83dd-eb517c01bd30/scripts/c360a.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
     
 </head>
