--- a/data-sci.html
+++ b/data-sci.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/20a2ffff-e983-428e-af4f-6bc85ccbae4a/scripts/c360a.min.js" defer></script>
     <script src="https://cdn.c360a.salesforce.com/beacon/c360a/8a63a2ff-c0de-4503-83dd-eb517c01bd30/scripts/c360a.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
     
@@ -230,6 +229,6 @@
         <script src="element5.js"></script> <script  src="script.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>
+        <!--<script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>-->
 </body>
 </html>
