--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
-               <!--<a href="cart.html" class="cart" id="cart"><i class="fal fa-shopping-cart cart"></i></a>-->
-                <a class="cart" id="cart"><i class="fal fa-shopping-cart cart"></i></a>
+               <a href="cart.html" class="cart" id="cart"><i class="fal fa-shopping-cart cart"></i></a>
                 <li><button class="login-button" id="login-button">Login</button></li>
                 <li><button class="login-button" id="logout-button">Logout</button></li>
                 <li><button id="opt-in">opt-in</button></li>
