--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ window.signup = function (e) {
             document.title = "PROFILE PAGE";
             }
         else{
-            localStorage.setItem('currentuser',"");
+          //  localStorage.setItem('currentuser',"");
         }
         })   
     
