--- a/element10.html
+++ b/element10.html
@@ -14,7 +14,7 @@
     
     <section id="header">
         <a href="index.html"><img src="https://banner2.cleanpng.com/20180817/wac/kisspng-e-learning-logo-industry-educational-technology-br-offline-is-the-new-online-unleash-the-power-of-an-5b76826b01f469.279560991534493291008.jpg" class="logo" alt=""></a>
-        <li class="hov"><a class="abc" href="course.html">Course</a>
+        <li class="hov"><p class="abc">Course</p>
             <div class="sub-menu-1">
                 <ul>
                     <li class="hover-me"><a href="web-dev.html">web development</a><i class="fa fa-angle-right"></i>
@@ -360,6 +360,5 @@ So what are you waiting for? Learn Python in a way that will advance your career
         <script src="element.js" type="module"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script type="text/javascript" src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>
 </body>
 </html>
