--- a/cart.html
+++ b/cart.html
@@ -60,7 +60,7 @@
         <a href="index.html"><img
                 src="https://banner2.cleanpng.com/20180817/wac/kisspng-e-learning-logo-industry-educational-technology-br-offline-is-the-new-online-unleash-the-power-of-an-5b76826b01f469.279560991534493291008.jpg"
                 class="logo" alt=""></a>
-        <li class="hov"><a class="abc" href="course.html">Course</a>
+        <li class="hov"><p class="abc">Course</p>
 
 
             <div class="sub-menu-1">
@@ -125,13 +125,7 @@
         </div>
     </section>
 
-    <div class="delete-section">
-        <form id="del-form" onsubmit="delete_course(event)">
-            <label for="">Remove Course</label>
-            <input id="courseid" type="text" placeholder="enter course-id">
-            <button class="delete" type="submit">Remove</button>
-        </form>
-    </div>
+    
 
     <section id="cart-view">
         <h1><u>COURSE-CART</u> </h1>
