--- a/data-sci.html
+++ b/data-sci.html
@@ -28,7 +28,7 @@
 <body>
     <section id="header">
         <a href="index.html"><img src="https://banner2.cleanpng.com/20180817/wac/kisspng-e-learning-logo-industry-educational-technology-br-offline-is-the-new-online-unleash-the-power-of-an-5b76826b01f469.279560991534493291008.jpg" class="logo" alt=""></a>
-        <li class="hov"><a class="abc" href="course.html">Course</a>
+        <li class="hov"><p class="abc">Course</p>
             <div class="sub-menu-1">
                 <ul>
                     <li class="hover-me"><a href="web-dev.html">web development</a><i class="fa fa-angle-right"></i>
