--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#"><img class="logo"
                 src="https://banner2.cleanpng.com/20180817/wac/kisspng-e-learning-logo-industry-educational-technology-br-offline-is-the-new-online-unleash-the-power-of-an-5b76826b01f469.279560991534493291008.jpg"
                 alt=""></a>
-        <li class="hov"><a class="abc">Course</a>
+        <li class="hov"><p class="abc">Course</p>
 
 
             <div class="sub-menu-1">
