--- a/data-sci.html
+++ b/data-sci.html
@@ -7,6 +7,8 @@
     <title>Data Science</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <script src="https://cdn.c360a.salesforce.com/beacon/c360a/8a63a2ff-c0de-4503-83dd-eb517c01bd30/scripts/c360a.min.js" defer></script>
+    
+    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/6bb9fc91-009e-4e4d-b158-622ae6011eba/scripts/c360a.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
     
 </head>
