--- a/software-eng.html
+++ b/software-eng.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software Testing</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <script
+    src="https://cdn.c360a.salesforce.com/beacon/c360a/8a63a2ff-c0de-4503-83dd-eb517c01bd30/scripts/c360a.min.js"
+    defer></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -245,6 +248,8 @@
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    
+    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/6bb9fc91-009e-4e4d-b158-622ae6011eba/scripts/c360a.min.js" defer></script>
     </body>
 
 </html>
