--- a/web-dev.html
+++ b/web-dev.html
@@ -248,8 +248,8 @@
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script type="text/javascript"
-        src="https://cdn.evgnet.com/beacon/aethereusconsulting/education/scripts/evergage.min.js"></script>
+    
+    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/6bb9fc91-009e-4e4d-b158-622ae6011eba/scripts/c360a.min.js" defer></script>
 </body>
 
 </html>
