--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
         src="https://cdn.c360a.salesforce.com/beacon/c360a/8a63a2ff-c0de-4503-83dd-eb517c01bd30/scripts/c360a.min.js"
         defer></script>
         <script src="https://cdn.c360a.salesforce.com/beacon/c360a/6bb9fc91-009e-4e4d-b158-622ae6011eba/scripts/c360a.min.js" defer></script>
+    <script src="https://cdn.c360a.salesforce.com/beacon/c360a/30921d56-4160-4d40-b530-cdf8c5e0ab40/scripts/c360a.min.js" defer></script>
 </body>
 
 </html>
